# sms_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.debug.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_08_1535-authuser_model.py
src/: database.py  main.py  settings.py
src/api/routers/: __init__.py  auth.py  sms.py  telegram.py
src/api/schemas/: jwt_shemas.py  sms.py  telegram.py
src/hadlers/: send_code.py
src/models/: users.py
src/repository/: user.py
src/utils/: jwt_manager.py  redic_client.py  send_tg_code.py  sms_semder.py
